<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="0.2dp"
        android:layout_marginBottom="6dp">

        <RelativeLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ImageViewStore"
                android:layout_width="360dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/DescriptionU"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:background="#000"
                android:alpha="0.8"
                android:textColor="#fff"
                android:textSize="26sp"
                android:text="@string/description"
                android:layout_alignBottom="@+id/ImageViewStore"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/Nameu"
                android:layout_below="@+id/DescriptionU"
                android:text="@string/Name"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/PriceU"
                android:layout_below="@+id/DescriptionU"
                android:layout_toRightOf="@+id/Nameu"
                android:text="@string/description"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TagU"
                android:text="tags"
                android:layout_below="@+id/PriceU"
                android:background="@color/colorAccent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>