<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="0.03dp"
        android:layout_marginBottom="3git add .dp">

        <RelativeLayout
            android:id="@+id/top_layout"
            android:layout_width="380dp"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/img_thumbnail"
                android:layout_width="360dp"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/app_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:background="#000"
                android:alpha="0.8"
                android:textColor="#fff"
                android:textSize="26sp"
                android:text="store name"
                android:layout_alignBottom="@+id/img_thumbnail"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="2dp"
                android:alpha="0.8"
                android:textColor="#ff272727"
                android:textSize="15sp"
                android:text="@string/description"
                android:layout_below="@+id/title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="2dp"
                android:alpha="0.8"
                android:textColor="#ff272727"
                android:textSize="15sp"
                android:text="@string/contact"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/img_thumbnail"
                android:layout_alignEnd="@+id/img_thumbnail"
                android:layout_below="@+id/title" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/cv"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/store_photo"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/store_name"
                    android:text="store name"
                    android:layout_toRightOf="@+id/store_photo"
                    android:layout_toEndOf="@+id/store_photo"
                    android:layout_alignParentTop="true"
                    android:textSize="30sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/work_done"
                    android:text="person_age"
                    android:layout_toRightOf="@+id/store_photo"
                    android:layout_toEndOf="@+id/store_photo"
                    android:layout_below="@+id/store_name"
                    />

            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </ScrollView>


</LinearLayout>